provarAnt/00D190000000ZY2EAM/objects/Terms_Conditions__c.object
<CustomObject>
    <description>Used for ATC Ts&amp;Cs</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ARA_Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Status__c</fullName>
        <label>Agreement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Ready to Sign</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>ARA_Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EchoSign_Template_Id__c</fullName>
        <description>Filled in by flow</description>
        <label>EchoSign Template Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_C_Type__c</fullName>
        <label>T&amp;C Type</label>
        <picklist>
            <picklistValues>
                <fullName>ATC Advertising Relationship Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM Terms and Conditions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Terms &amp; Conditions</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Terms &amp; Conditions</pluralLabel>
    <recordTypes>
        <fullName>Ready_to_Sign</fullName>
        <active>true</active>
        <description>Page with EchoSign button</description>
        <label>Ready to Sign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Signed</fullName>
        <active>true</active>
        <description>Page without EchoSign button</description>
        <label>Signed</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>